bluestore: do not _colletion_list when _remove_collection Very high latencies on Bluestore::_collection_list() operations during PG removal. These latencies regularly exceed the OSD suicide timeout and cause the OSDs to thrash. We can remove the check here. Since PG::do_delete_work does check with collection_list  to ensure there is no objects in db for the coll before remove_collection.

Fixes: https://tracker.ceph.com/issues/58274
Signed-off-by: haoyixing <haoyixing@kuaishou.com>